--- a/views/landing.pug
+++ b/views/landing.pug
@@ -4,5 +4,5 @@ block content
   h1= title
   p Welcome to #{title}
   form(action="/", method="POST")
-    input(type="email", placeholder="Enter your email address")
+    input(name="lead_email", type="email", placeholder="Enter your email address")
     button(type="submit") Submit  
