Implement /leads route
Show a collection of leads upon submission

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -6,3 +6,8 @@ block content
   form(action="/", method="POST")
     input(name="lead_email", type="email", placeholder="Enter your email address")
     button(type="submit") Submit  
+  if leads
+    h1 Leads
+    for lead in leads
+      p #{lead.email}
+
