Add a new route to display lead details

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -9,5 +9,8 @@ block content
   if leads
     h1 Leads
     for lead in leads
-      p #{lead.email}
+      p
+        span #{lead.email}
+        | 
+        a(href="/lead/" + lead.id) Details
 
