Implement delete route for leads

--- a/views/lead.pug
+++ b/views/lead.pug
@@ -6,3 +6,6 @@ block content
     span #{lead.email}
     | 
     a(href="/lead/" + lead.id + "/edit") Edit
+    | 
+    form(action="/lead/" + lead.id + "/delete", method="POST")
+      button(type="submit") Delete
