Add a common header and footer section in all pug files
	new file:   views/common/footer.pug
	new file:   views/common/head.pug
	new file:   views/common/navbar.pug
	modified:   views/landing.pug
	deleted:    views/layout.pug
	modified:   views/lead.pug
	modified:   views/error.pug

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -1,19 +1,22 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
-  form(action="/", method="POST")
-    input(name="lead_email", type="email", placeholder="Enter your email address")
-    button(type="submit") Submit  
-  if leads
-    h1 Leads
-    for lead in leads
-      p(id=lead.id)
-        span #{lead.email}
-        | 
-        a(href="/lead/" + lead.id) Details
-        |
-        button(onclick=`deleteLead('${lead.id}')`) Delete
-  script(src='https://code.jquery.com/jquery-3.2.1.min.js')
-  script(src='/javascripts/leads.js')
+doctype html
+html(lang='en')
+  include common/head.pug
+  +head("Starter MVP")
+  body
+    h1= title
+    p Welcome to #{title}
+    form(action="/", method="POST")
+      input(name="lead_email", type="email", placeholder="Enter your email address")
+      button(type="submit") Submit  
+    if leads
+      h1 Leads
+      for lead in leads
+        p(id=lead.id)
+          span #{lead.email}
+          | 
+          a(href="/lead/" + lead.id) Details
+          |
+          button(onclick=`deleteLead('${lead.id}')`) Delete
+    include common/footer.pug
+    +footer()
+    script(src='/javascripts/leads.js')
