--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,8 @@
-extends layout
-
-block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+doctype html
+html(lang='en')
+  include common/head.pug
+  +head("Error")
+  body
+    h1= message
+    h2= error.status
+    pre #{error.stack}
