--- a/views/lead.pug
+++ b/views/lead.pug
@@ -1,11 +1,15 @@
-extends layout
-
-block content
-  h1 Lead
-  p 
-    span #{lead.email}
-    | 
-    a(href="/lead/" + lead.id + "/edit") Edit
-    | 
-    form(action="/lead/" + lead.id + "/delete", method="POST")
-      button(type="submit") Delete
+doctype html
+html(lang='en')
+  include common/head.pug
+  +head("Starter MVP")
+  body
+    h1 Lead
+    p 
+      span #{lead.email}
+      | 
+      a(href="/lead/" + lead.id + "/edit") Edit
+      | 
+      form(action="/lead/" + lead.id + "/delete", method="POST")
+        button(type="submit") Delete
+    include common/footer.pug
+    +footer()
