--- a/views/common/head.pug
+++ b/views/common/head.pug
@@ -7,3 +7,4 @@ mixin head(title)
     meta(name='viewport', content='width=device-width,initial-scale=1,maximum-scale=1')
     meta(name='description', content='')
     link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons")
