Added a dashboard page with simple sidebar
This will be used for SaaS admin, e.g. links to edit plans, leads
and more.

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -11,6 +11,8 @@ mixin navbar(user)
             a.nav-link(href="/leads") Leads
           li.nav-item
             a.nav-link(href="/plans") Plans
+          li.nav-item
+            a.nav-link(href="/dashboard") Dashboard
     .navbar-right
       if currentUser
         span.navbar-text Hello #{currentUser.firstname}!
