--- a/views/pricing.pug
+++ b/views/pricing.pug
@@ -12,6 +12,20 @@ html(lang='en')
     .pricing-header.px-3.py-3.pt-md-5.pb-md-4.mx-auto.text-center
       h1.display-4 Pricing
       p.lead Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.
+      .container
+        .row.justify-content-md-center
+          .col-md-8
+            ul.nav.nav-pills.nav-justified
+              if plans[0].billing_period == "monthly"
+                li.nav-item
+                    a(href="/pricing").nav-link.active Monthly
+                li.nav-item
+                  a(href="/pricing-yearly").nav-link Yearly
+              else
+                li.nav-item
+                  a(href="/pricing").nav-link Monthly
+                li.nav-item
+                  a(href="/pricing-yearly").nav-link.active Yearly
     .container
       .card-deck.mb-3.text-center
         for plan in plans
