Updated all plan/lead views to be inside a dashboard side panel.
Admin can access the dashboard where she/he can navigate between
management links for plans, leads, and more.
	modified:   app.js
	deleted:    controllers/dashboard.js
	modified:   controllers/landing.js
	modified:   controllers/plan.js
	modified:   routes/index.js
	modified:   views/common/navbar.pug
	new file:   views/common/side-dash.pug
	modified:   views/lead/edit_lead.pug
	modified:   views/lead/lead.pug
	modified:   views/lead/leads.pug
	modified:   views/plan/create_plan.pug
	modified:   views/plan/edit_plan.pug
	modified:   views/plan/plan.pug
	modified:   views/plan/plans.pug

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -8,11 +8,7 @@ mixin navbar(user)
           a.nav-link(href="/") Home
         if currentUser && currentUser.is_admin
           li.nav-item
-            a.nav-link(href="/leads") Leads
-          li.nav-item
-            a.nav-link(href="/plans") Plans
-          li.nav-item
-            a.nav-link(href="/dashboard") Dashboard
+            a.nav-link(href="/leads") Dashboard
     .navbar-right
       if currentUser
         span.navbar-text Hello #{currentUser.firstname}!
