--- a/views/lead/edit_lead.pug
+++ b/views/lead/edit_lead.pug
@@ -1,11 +1,21 @@
-doctype html
-html(lang='en')
-  include ../common/head.pug
-  +head("Edit Lead")
-  body
-    header
-      include ../common/navbar.pug
-      +navbar()
+include ../common/head.pug
++head("Edit Lead")
+body
+  header
+    include ../common/navbar.pug
+    +navbar(user)
+  //  Custom styles for this template 
+  link(href='/stylesheets/simple-sidebar.css', rel='stylesheet')
+  .d-flex#wrapper
+    //  Sidebar 
+    .bg-light.border-right#sidebar-wrapper
+      .sidebar-heading Dashboard
+      .list-group.list-group-flush
+        for item in panel
+          a(href=item.link).list-group-item.list-group-item-action.bg-light #{item.name}
+    //  /#sidebar-wrapper 
+    //  Page Content 
+    #page-content-wrapper
       .container
         .row.align-items-center
           .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
@@ -15,5 +25,5 @@ html(lang='en')
                 input(name="lead_email", type="email", placeholder="Enter your email address", value=lead.email).form-control
                 .input-group-append
                   button(type="submit").btn.btn-primary Save
-    include ../common/footer.pug
-    +footer()
+  include ../common/footer.pug
+  +footer()
