--- a/views/plan/edit_plan.pug
+++ b/views/plan/edit_plan.pug
@@ -1,14 +1,24 @@
-doctype html
-html(lang='en')
-  include ../common/head.pug
-  +head("Edit Plan")
-  body
-    header
-      include ../common/navbar.pug
-      +navbar()
+include ../common/head.pug
++head(title)
+body
+  header
+    include ../common/navbar.pug
+    +navbar(user)
+  //  Custom styles for this template 
+  link(href='/stylesheets/simple-sidebar.css', rel='stylesheet')
+  .d-flex#wrapper
+    //  Sidebar 
+    .bg-light.border-right#sidebar-wrapper
+      .sidebar-heading Dashboard
+      .list-group.list-group-flush
+        for item in panel
+          a.list-group-item.list-group-item-action.bg-light(href=item.link) #{item.name}
+    //  /#sidebar-wrapper 
+    //  Page Content 
+    #page-content-wrapper
       .container
-        .row.align-items-center
-          .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
+        .row
+          .col-md-8
             h1 Edit Plan
             form(action="/plan/"+plan.id+"/edit", method="POST")
               .input-group.mb-3
@@ -50,5 +60,5 @@ html(lang='en')
                 input(name="plan_rank", type="number", placeholder="Order of appearance", value=plan.rank).form-control              
                 .input-group-append
                   button(type="submit").btn.btn-primary Save
-    include ../common/footer.pug
-    +footer()
+  include ../common/footer.pug
+  +footer()
