--- a/views/plan/plans.pug
+++ b/views/plan/plans.pug
@@ -1,14 +1,24 @@
-doctype html
-html(lang='en')
-  include ../common/head.pug
-  +head("Your Plans")
-  body
-    header
-      include ../common/navbar.pug
-      +navbar()
+include ../common/head.pug
++head(title)
+body
+  header
+    include ../common/navbar.pug
+    +navbar(user)
+  //  Custom styles for this template 
+  link(href='/stylesheets/simple-sidebar.css', rel='stylesheet')
+  .d-flex#wrapper
+    //  Sidebar 
+    .bg-light.border-right#sidebar-wrapper
+      .sidebar-heading Dashboard
+      .list-group.list-group-flush
+        for item in panel
+          a.list-group-item.list-group-item-action.bg-light(href=item.link) #{item.name}
+    //  /#sidebar-wrapper 
+    //  Page Content 
+    #page-content-wrapper
       .container
-        .row.align-items-center
-          .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
+        .row
+          .col-md-8
             h1 Plans
             table.table
               thead
@@ -29,6 +39,6 @@ html(lang='en')
             a(href="/plan/new").btn.btn-primary.d-flex.justify-content-center.align-content
               i.material-icons add
               span Create New Plan
-    include ../common/footer.pug
-    +footer()
-    script(src='/javascripts/plans.js')
+  include ../common/footer.pug
+  +footer()
+  script(src='/javascripts/plans.js')
