Implement stripe checkout with credit card
Pricing page submits form that sets session variable for plan id.
Checkout page requires sign in. Tested redirects from social
or email sign in paths.

Added new fields subscriber id, customer id, plan relation to User

Trial period is assumed to be fixed to 1 month.
	modified:   controllers/checkout.js
	modified:   controllers/landing.js
	modified:   controllers/plan.js
	modified:   controllers/user.js
	modified:   middleware/hasAuth.js
	new file:   middleware/side-panel.js
	new file:   migrations/201904261515-AddCustomerFieldsToUser.js
	modified:   models/Plan.js
	modified:   models/User.js
	modified:   routes/index.js
	modified:   views/checkout.pug

--- a/views/checkout.pug
+++ b/views/checkout.pug
@@ -27,6 +27,7 @@ html(lang='en')
                 label(for="card-element") Credit or debit card
                 div(id="card-element")
                 div(id="card-errors", role="alert")
+                input(type='hidden', name="planId", value=plan.id)
                 button.btn.btn-primary.mt-3(type="submit") Submit Payment
         .col-md-3
           .card
