Added a new theme called Basik, added a sidebar for each plugin
Each aspect of the app e.g. plans / leads are managed from a
sidebar.

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -1,7 +1,7 @@
 mixin navbar(user)
   nav.navbar.navbar-expand.navbar-light.bg-light
     a(href="/", aria-label="Golden Goose").navbar-brand.mr-0.mr-md-2
-      img(src="/images/golden-goose.svg", width="36", height="36")
+      img(src="/images/zero-to-saas-logo.svg", width="36", height="36")
     .collapse.navbar-collapse
       ul.navbar-nav.mr-auto
         li.nav-item
