--- a/views/pricing.pug
+++ b/views/pricing.pug
@@ -59,7 +59,7 @@ html(lang='en')
                     li #{plan.feature9}
                   if (plan.feature10)
                     li #{plan.feature10}
-                button(name="planId", value=plan.id).btn.btn-lg.btn-block.btn-outline-primary.mt-auto #{plan.cta}
+                button(name="planId", value=plan.id).btn.btn.btn-block.btn-outline-primary.mt-auto #{plan.cta}
       footer.pt-4.my-md-5.pt-md-5.border-top
         .row
           .col-12.col-md
