--- a/views/user/login.pug
+++ b/views/user/login.pug
@@ -14,7 +14,7 @@ html(lang='en')
               .row
                 .col-sm-10.offset-md-1.offset-sm-1.col-md-10.align-center
                   a(href="/signup-google").mt-3.btn.btn-primary.btn-block Log in with Google
-                  a(href="/signup-facebook").mt-3.btn.btn-primary.btn-block Log in up with Facebook
+                  a(href="/signup-facebook").mt-3.btn.btn-primary.btn-block Log in with Facebook
                   a(href="/signup-twitter").mt-3.btn.btn-primary.btn-block Log in with Twitter
               .row
                 .col-sm-12.col-md-12.col-xs-12
