--- a/views/common/footer.pug
+++ b/views/common/footer.pug
@@ -2,3 +2,8 @@ mixin footer(footer)
   script(src="https://code.jquery.com/jquery-3.3.1.min.js"  crossorigin="anonymous")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous")
   script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous")
+
+  //- Basik
+  script(src="/javascripts/basik/feathericon.js")
+  script(src="/javascripts/basik/theme.js")
+  script(src="/javascripts/basik/utils.js")
