--- a/views/common/head.pug
+++ b/views/common/head.pug
@@ -6,5 +6,9 @@ mixin head(title)
     //<base href="/">
     meta(name='viewport', content='width=device-width,initial-scale=1,maximum-scale=1')
     meta(name='description', content='')
-    link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous")
+    //-link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous")
     link(rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons")
+    // Basik
+    link(rel="stylesheet", href="/stylesheets/basik/bootstrap.css")
+    link(rel="stylesheet", href="/stylesheets/basik/style.css")
+    link(rel="stylesheet", href="/stylesheets/basik/theme.css")
