--- a/views/lead/lead.pug
+++ b/views/lead/lead.pug
@@ -1,20 +1,9 @@
-include ../common/head.pug
-+head("Lead")
-body
-  header
-    include ../common/navbar.pug
-    +navbar(user)
-  //  Custom styles for this template 
-  link(href='/stylesheets/simple-sidebar.css', rel='stylesheet')
-  .d-flex#wrapper
-    //  Sidebar 
-    .bg-light.border-right#sidebar-wrapper
-      .sidebar-heading Dashboard
-      .list-group.list-group-flush
-        for item in panel
-          a(href=item.link).list-group-item.list-group-item-action.bg-light #{item.name}
-    //  /#sidebar-wrapper 
-    //  Page Content 
+extends ../common/layout-with-sidebar.pug
+block head
+  include ../common/head.pug
+  +head("Lead")
+
+block page_content
     #page-content-wrapper
       .container
         .row.align-items-center
@@ -36,6 +25,7 @@ body
                   td 
                     form(action="/lead/" + lead.id + "/delete", method="POST")
                       button(type="submit").btn.btn-primary Delete
+block footer
   include ../common/footer.pug
   +footer()
   script(src='/javascripts/leads.js')
