--- a/views/plan/plans.pug
+++ b/views/plan/plans.pug
@@ -1,20 +1,8 @@
-include ../common/head.pug
-+head(title)
-body
-  header
-    include ../common/navbar.pug
-    +navbar(user)
-  //  Custom styles for this template 
-  link(href='/stylesheets/simple-sidebar.css', rel='stylesheet')
-  .d-flex#wrapper
-    //  Sidebar 
-    .bg-light.border-right#sidebar-wrapper
-      .sidebar-heading Dashboard
-      .list-group.list-group-flush
-        for item in panel
-          a.list-group-item.list-group-item-action.bg-light(href=item.link) #{item.name}
-    //  /#sidebar-wrapper 
-    //  Page Content 
+extends ../common/layout-with-sidebar.pug
+block head
+  include ../common/head.pug
+  +head("Plans")
+block page_content
     #page-content-wrapper
       .container
         .row
@@ -39,6 +27,7 @@ body
             a(href="/plan/new").btn.btn-primary.d-flex.justify-content-center.align-content.btn-sm
               i.material-icons add
               span Create New Plan
+block footer
   include ../common/footer.pug
   +footer()
   script(src='/javascripts/plans.js')
