Update pricing plans, landing page, side panel, mailchimp page

--- a/views/mailchimp/mailchimp.pug
+++ b/views/mailchimp/mailchimp.pug
@@ -29,7 +29,7 @@ block page_content
             p.lead 2. Go to Profile > Extras > API Keys. Create an API key if it doesn't exist. Copy & Paste it to the API section here.
             p.lead 3. Go to Audience > Manage Audience on the right > Settings > Audience Name and Defaults > Audience ID on the right. Copy & paste it to the listid section here.
             p.lead 4. Click save.
-            p.lead 5. If you submit an email on the landing page, you will now find it in your Mailchimp list as well as the Leads section here.
+            p.lead 5. If your leads submit their email on the landing page, they will be added to your Mailchimp list.
 
 block footer
   include ../common/footer.pug
